<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sat="http://schemas.android.com/apk/res/com.example.previous2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    
    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/take_photo"
        android:onClick="clickedTakePhoto"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />
    
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/settings"
        android:onClick="clickedSettings"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/gallery"
        android:src="@drawable/gallery"
        android:onClick="clickedGallery"
        android:visibility="invisible"
        />




    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/switch_camera"
        android:src="@drawable/switch_camera"
        android:onClick="clickedSwitchCamera"
        />

    <!-- should be at left-most -->
    <ImageButton
        android:id="@+id/trash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/trash"
        android:src="@drawable/trash"
        android:onClick="clickedTrash"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/share"
        android:src="@drawable/share"
        android:onClick="clickedShare"
        android:visibility="invisible"
        />

      <com.example.previous2.ArcMenu
          android:id="@+id/menu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          sat:closeOnClick="true"
          sat:expandDuration="800"
          sat:mainImage="@drawable/ic_launcher"
          sat:satelliteDistance="130dp"
          sat:totalSpacingDegree="120" >
      </com.example.previous2.ArcMenu>

</RelativeLayout>
