<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/preview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    
    <ImageButton
        android:id="@+id/take_photo1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/take_photo"
        android:onClick="clickedTakePhoto"
        android:layout_centerVertical="true"
        />
<ImageButton
        android:id="@+id/settings1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/settings"
        android:onClick="clickedSettings"
        android:visibility="invisible"
        />
    
    <!-- should be at left-most -->
    

    <ImageButton
        android:id="@+id/switch_camera1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/switch_camera"
        android:onClick="clickedSwitchCamera"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/switch_camera" />

</RelativeLayout>
